03_bibliotecas/bibli_02/Resultados/JoaoHenrique/main/result_compilation.txt
Resultados/JoaoHenrique/main/main.c: In function ‘main’:
Resultados/JoaoHenrique/main/main.c:26:22: error: ‘acao’ undeclared (first use in this function)
   26 |         scanf("%d", &acao);
      |                      ^~~~
Resultados/JoaoHenrique/main/main.c:26:22: note: each undeclared identifier is reported only once for each function it appears in
Resultados/JoaoHenrique/main/main.c:64:60: warning: passing argument 4 of ‘transpose_matrix’ makes pointer from integer without a cast [-Wint-conversion]
   64 |                 transpose_matrix(linha1, coluna1, matriz1, escalar);
      |                                                            ^~~~~~~
      |                                                            |
      |                                                            int
In file included from Resultados/JoaoHenrique/main/main.c:2:
Resultados/JoaoHenrique/main/matrix_utils.h:91:71: note: expected ‘int (*)[rows]’ but argument is of type ‘int’
   91 | void transpose_matrix(int rows, int cols, int matrix[rows][cols], int result[cols][rows]);
      |                                                                   ~~~~^~~~~~~~~~~~~~~~~~
Resultados/JoaoHenrique/main/main.c:6:56: warning: unused variable ‘colunaResult’ [-Wunused-variable]
    6 |     int linha1, coluna1, linha2, coluna2, linhaResult, colunaResult;
      |                                                        ^~~~~~~~~~~~
Resultados/JoaoHenrique/main/main.c:6:43: warning: unused variable ‘linhaResult’ [-Wunused-variable]
    6 |     int linha1, coluna1, linha2, coluna2, linhaResult, colunaResult;
      |                                           ^~~~~~~~~~~
Resultados/JoaoHenrique/main/matrix_utils.c: In function ‘matrix_read’:
Resultados/JoaoHenrique/main/matrix_utils.c:15:21: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Wformat=]
   15 |             scanf("%d", matrix[i][j]);
      |                    ~^   ~~~~~~~~~~~~
      |                     |            |
      |                     int *        int
Resultados/JoaoHenrique/main/matrix_utils.c: In function ‘matrix_sub’:
Resultados/JoaoHenrique/main/matrix_utils.c:130:9: warning: unused variable ‘sum’ [-Wunused-variable]
  130 |     int sum = 0;
      |         ^~~
